fixed name of group not showing up

--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -257,6 +257,7 @@ html, body
 {
 	.header-block
 	{
+		z-index: 1;
 		display: flex;
 		align-items: center;
 		text-align: left;
